force-app/main/default/objects/Cliente__c/Cliente__c.object-meta.xml
<CustomObject>
    <label>Cliente</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>