force-app/main/default/objects/Cliente__c/fields/Ultimo_Contato__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Contato__c</fullName>
    <label>Ultimo_Contato</label>
    <type>Date</type>
</CustomField>